# custom-logging

./: CMakeLists.txt  LICENSE  README.md  configure
app/: client.cpp
include/: log_destination.h  logger.h
src/: log_destination.cpp  logger.cpp
